--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,24 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <div class="mg-top-40">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <strong>{{ userIndentification }}</strong>
+      <div (click)="logout()">Sair</div>
+    </nav>
+
+    <div class="row" class="box-alerts">
+      <div class="col-sm-6 col-md-6">
+          <div class="alert-message alert-message-danger">
+              <h4><strong>Acidente</strong></h4>
+              <p> Dirija-se ao <strong>km 18</strong> da Avenida Anchieta</p>
+          </div>
+      </div>
+    </div>
+
+    <ul class="list-group">
+      <li class="list-group-item" (click)="page_last_incidents()">Últimos Incidentes</li>
+      <li class="list-group-item" (click)="page_report_incident()">Reportar Incidente</li>
+      <li class="list-group-item" (click)="page_report_work()">Reportar Obra</li>
+      <li class="list-group-item" (click)="page_chat()">Falar com a Central</li>
+    </ul>
   </div>
 </ion-content>
