--- a/src/global.scss
+++ b/src/global.scss
@@ -9,6 +9,50 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
+/* Fonts */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,700&display=swap');
+
+* {
+  padding: 0px;
+  margin: 0px;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+/* Global */
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
+/* Aligns */
+
+.center {
+  text-align: center;
+}
+
+.mg-top-20 {
+  margin-top: 20px;
+}
+
+.mg-top-40 {
+  margin-top: 40px;
+}
+
+.mg-bottom-40 {
+  margin-bottom: 40px;
+}
+
+
+.pd-sides-40 {
+  padding: 0px 40px;
+}
+
+.pd-top-30-percent {
+  padding-top: 30%;
+}
+
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
 
@@ -24,3 +68,7 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+/* Bootstrap */
+@import '~@ionic/angular/css/ionic.bundle.css';
+@import '~bootstrap/dist/css/bootstrap.min.css';
