Tela de Incidentes com mais algumas informações

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="mg-top-40">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <strong>{{ userIndentification }}</strong>
+      <strong>Olá, {{ userIndentification }}</strong>
       <div (click)="logout()">Sair</div>
     </nav>
 
