--- a/src/app/last-incidents/last-incidents.page.html
+++ b/src/app/last-incidents/last-incidents.page.html
@@ -3,34 +3,34 @@
       <div (click)="page_home()">Voltar</div>
     </nav>
   
-    <h4>Ultimos Incidentes</h4>
+    <h1>Ultimos Incidentes</h1>
 
     <ul class="list-group">
-      <li class="card">
+      <li class="card normal">
         <div class="card-body">
           <h6 class="card-title">Engavetamento</h6>
           <small class="card-text">Acidante envolvedo dois carros e um caminhão. Vítimas passam bem. Atendimento efetuado.</small>
         </div>
       </li>
-      <li class="card">
+      <li class="card high">
         <div class="card-body">
           <h6 class="card-title">Animal na via</h6>
           <small class="card-text">Uma vaca foi vista por câmeras circulando à beira da via entre o Km 22 e o 23.</small>
         </div>
       </li>
-      <li class="card">
+      <li class="card low">
         <div class="card-body">
           <h6 class="card-title">Carro no acostamento</h6>
           <small class="card-text">Carro de passeio parado no acostamento no kilômetro 17. Viatura a caminho.</small>
         </div>
       </li>
-      <li class="card">
+      <li class="card high">
         <div class="card-body">
           <h6 class="card-title">Óleo na pista</h6>
           <small class="card-text">Caminhão vazando óleo na pista. Incidente sobre controle.</small>
         </div>
       </li>
-      <li class="card">
+      <li class="card normal">
         <div class="card-body">
           <h6 class="card-title">Congestionamento 22KM</h6>
           <small class="card-text">Anchieta direção São Paulo apresenta forte congestionamento.</small>
