--- a/src/app/report-incident/report-incident.page.html
+++ b/src/app/report-incident/report-incident.page.html
@@ -4,4 +4,20 @@
   </nav>
 
   <h1>Reportar Incidente</h1>
+
+  <form action="#" id="incident-form" class="base-form">
+    <select>
+      <option>Urgencia</option>
+      <option>Normal</option>
+      <option>Média</option>
+      <option>Alta</option>
+    </select>
+
+    <input type="text" placeholder="Onde" />
+
+    <textarea placeholder="Descrição"></textarea>
+
+    <input type="submit" class="btn-submit" value="reportar" />
+  </form>
+  
 </ion-content>
