--- a/src/app/report-work/report-work.page.html
+++ b/src/app/report-work/report-work.page.html
@@ -4,4 +4,12 @@
   </nav>
 
   <h1>Reportar Obra</h1>
+
+  <form action="#" id="work-form" class="base-form">
+    <input type="text" placeholder="Onde" />
+
+    <textarea placeholder="Descrição"></textarea>
+
+    <input type="submit" class="btn-submit" value="reportar" />
+  </form>
 </ion-content>
